<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="vertical">

    <com.mamits.zini24vendor.ui.customviews.CustomTextView
        android:id="@+id/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/your_nnew_pin"
        android:textColor="@color/black"
        android:textSize="@dimen/_25ssp"
        app:fontName="Raleway-Medium.ttf" />


    <LinearLayout
        android:id="@+id/ll_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@color/edit_text_back"
        android:orientation="vertical">

        <com.mamits.zini24vendor.ui.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/enter_new_pin"
            android:textColor="@color/black"
            android:textSize="@dimen/_8ssp"
            app:fontName="Raleway-Light.ttf" />

        <com.mamits.zini24vendor.ui.customviews.CustomInputEditText
            android:id="@+id/et_new_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:background="@null"
            android:hint="@string/password_text"
            android:inputType="numberPassword"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/_17ssp"
            android:maxLength="6"
            app:fontName="Raleway-Light.ttf" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_conf_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@color/edit_text_back"
        android:orientation="vertical">

        <com.mamits.zini24vendor.ui.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/re_enter_new_pin"
            android:textColor="@color/black"
            android:textSize="@dimen/_8ssp"
            app:fontName="Raleway-Light.ttf" />

        <com.mamits.zini24vendor.ui.customviews.CustomInputEditText
            android:id="@+id/et_cnf_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:background="@null"
            android:hint="@string/password_text"
            android:inputType="numberPassword"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/_17ssp"
            android:maxLength="6"
            app:fontName="Raleway-Light.ttf" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btn_change_pin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/color_orange">

        <com.mamits.zini24vendor.ui.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_pin"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:fontName="Raleway-Medium.ttf" />
    </RelativeLayout>
</LinearLayout>